# hellodev

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
docs/: CASE_STUDY.md  DISCLOSURE_DEMO.md  EVOLUTION_DEMO.md  F1_DEMO.md  F2_DEMO.md  OPTIMIZE_DEMO.md  QUICK_START.md  RELEASE.md  WHY_HELLODEV.md
docs/ai/: CHANGE_SURFACES.md  CODEBASE_MAP.md  OPEN_QUESTIONS.md
examples/: host_sdk_minimal.py
examples/minimal/: README.md
scripts/: build_unified_bundle.py  demo.ps1  generate_bundle_metadata.py  mcp_smoke.py  verify.py  verify_release_version.py  verify_unified_bundle.py
src/hellodev/: __init__.py  application.py  approval.py  audit.py  bounded_results.py  briefs.py  bundle_builder.py  capabilities.py  checkpoints.py  cli.py  command_rendering.py  components.py  context_policy.py  contracts.py  dashboard.py  delegation.py  drift.py  efficiency_cycles.py  gates.py  governance.py  host_bridge.py  host_sdk.py  integrations.py  intelligence.py  knowledge_flows.py  lifecycle.py  mcp_gateway.py  nocturne_runner.py  onboarding.py  optimization.py  policy_evolution.py  profiles.py  project.py  receipts.py  repository_tools.py  resume.py  routing.py  sagas.py  snapshot.py  state_lock.py  (+3 more)
src/hellodev/adapters/: __init__.py  nocturne.py  trellis.py
src/hellodev/context_runtime/: __init__.py  contracts.py  cursor.py  native.py  planner.py
src/hellodev/dashboard_assets/: app.js  index.html  styles.css
src/hellodev/distribution/: THIRD_PARTY_NOTICES.md  component-lock-v1.json
src/hellodev/schemas/: component-bundle-v1.schema.json  host-envelope-v1.schema.json  host-protocol-v1.schema.json  host-result-v1.schema.json
tests/: test_approval_atomicity.py  test_cli.py  test_context_policy.py  test_contracts.py  test_delegation.py  test_efficiency_cycles.py  test_f1_cli.py  test_f1_security.py  test_f2_atomicity.py  test_f2_cli.py  test_f2_dashboard.py  test_host_bridge.py  test_knowledge_flows.py  test_optimization.py  test_policy_evolution.py  test_profiles.py  test_receipt_evidence.py  test_resume_gates.py  test_routing.py  test_trellis_intents.py  test_usage_collector.py  test_v11_cli.py  test_v121_oss.py  test_v121_polish.py  test_v12_reliability.py  test_v13_gateway.py  test_v13_mcp.py  test_v141_task_continuity.py  test_v143_knowledge_lifecycle.py  test_v14_distribution.py  test_v15_repository_tools.py  test_v16_context_plane.py
tests/fixtures/: fake_mcp_server.py
